<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    >

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginLeft="30dp"


    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/question1"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
         />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quaid e Azam"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allama Iqbal"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liaqat Ali Khan"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ayub Khan"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/question2"
        android:layout_weight="1"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ans21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karachi"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/ans22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lahore"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/ans23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Islamabad"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/ans24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Peshawar"
            android:onClick="onRadioButtonClicked2"/>

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/question3"
        android:layout_weight="1"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ans31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pound"
            android:onClick="onRadioButtonClicked3"/>
        <RadioButton android:id="@+id/ans32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dollar"
            android:onClick="onRadioButtonClicked3"/>
        <RadioButton android:id="@+id/ans33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Euro"
            android:onClick="onRadioButtonClicked3"/>
        <RadioButton android:id="@+id/ans34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rupee"
            android:onClick="onRadioButtonClicked3"/>

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/question4"
        android:layout_weight="1"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ans41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Basket Bal"
            android:onClick="onRadioButtonClicked4"/>
        <RadioButton android:id="@+id/ans42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hockey"
            android:onClick="onRadioButtonClicked4"/>
        <RadioButton android:id="@+id/ans43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Football"
            android:onClick="onRadioButtonClicked4"/>
        <RadioButton android:id="@+id/ans44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cricket"
            android:onClick="onRadioButtonClicked4"/>

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/question5"
        android:layout_weight="1"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ans51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lion"
            android:onClick="onRadioButtonClicked5"/>
        <RadioButton android:id="@+id/ans52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buffalo"
            android:onClick="onRadioButtonClicked5"/>
        <RadioButton android:id="@+id/ans53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Markhor"
            android:onClick="onRadioButtonClicked5"/>
        <RadioButton android:id="@+id/ans54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chokor"
            android:onClick="onRadioButtonClicked5"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:id="@+id/btn1"
        android:onClick="onButtonClicked"
        android:layout_marginBottom="30dp"

        />

</LinearLayout>

</ScrollView>